k8s/homeassistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  type: LoadBalancer
  selector:
    app: homeassistant
  ports:
    - port: 8123
      targetPort: http
      protocol: TCP
