k8s/homeassistant/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`hass.homelab.bertbullough.com`)
      kind: Rule
      services:
        - name: homeassistant
          port: 8123
